--- a/lib1/src/main/AndroidManifest.xml
+++ b/lib1/src/main/AndroidManifest.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.yy.roomexercise">
-    <uses-sdk tools:overrideLibrary="com.dosmono.bridge"/>
+    package="com.shkj.lib1">
+
     <application
-        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:replace="android:name,android:theme"
         android:theme="@style/Theme.RoomExercise">
-<!--        <activity android:name=".MainActivity2"></activity>-->
-        <activity android:name=".MainActivity">
+        <activity android:name=".HelloActivity"></activity>
+        <activity android:name=".LibMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
